--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
@@ -73,7 +73,7 @@
                             <div *ngIf="loan.loanStage.id == 1 ">
                                 <div class="kt-pointer" class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="editLoan(loan)"  [ngClass]="{'cursor-not-allowed':  !(loan.loanStatusForAppraiser == 'pending'
+                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed':  !(loan.loanStatusForAppraiser == 'pending'
                                     && this.roles == 'Appraiser')}"
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
@@ -81,9 +81,8 @@
                             <div *ngIf="loan.loanStage.id == 2">
                                 <div class="kt-pointer" class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="editLoan(loan)"[ngClass]="{'cursor-not-allowed': !((loan.loanStatusForBM == 'pending' || loan.loanStatusForBM == 'rejected')
-                                    && this.roles == 'Branch Manager' && loan.loanStatusForAppraiser == 'approved')}" 
-                                    
+                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !((loan.loanStatusForBM == 'pending' || loan.loanStatusForBM == 'rejected')
+                                    && this.roles == 'Branch Manager' && loan.loanStatusForAppraiser == 'approved')}"
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
                             </div>
@@ -114,7 +113,7 @@
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan">
                         <span (click)="viewLoan(loan)" class="kt-pointer">
-                            View
+                            <strong>View</strong>
                         </span>
                     </mat-cell>
                 </ng-container>
