--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -16,7 +16,7 @@
         <!-- Product -->
         <div class="kt-portlet__body" *ngIf="filterName =='product'">
           <div class="kt-form">
-            <form [formGroup]="filterForm" *ngIf="filterName =='product'">
+            <form [formGroup]="filterForm">
               <div class="form-group kt-form__group row">
                 <div class="col-12 kt-margin-bottom-20-mobile">
                   <div class="row pb-3">
@@ -65,7 +65,11 @@
                         (click)="applyFilter()">
                       </kt-button>
                     </div>
-
+                    <div class="col-12 pt-2">
+                      <mat-error *ngIf="controls.priceTo.errors?.priceRange">
+                        <span>Price To should be greater then Price From</span>
+                      </mat-error>
+                    </div>
                   </div>
                 </div>
               </div>
