bhushan: review img length validation, rating

--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
@@ -78,15 +78,15 @@
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef>KYC Details</mat-header-cell>
                     <mat-cell *matCellDef="let role" (click)="viewKYC(role)" class="kt-pointer">
-                        View
+                        <strong>View</strong>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="appraiser">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let role"  class="kt-pointer">
-                        <button class="apply-kyc" (click)="assign()" 
-                        *ngIf="role.kycStatus == 'approved' && role.customerKycClassification.kycStatusFromCce == 'approved'"
-                        >Assign Appraiser</button>
+                    <mat-cell *matCellDef="let role" class="kt-pointer">
+                        <button class="apply-kyc" (click)="assign()"
+                            *ngIf="role.kycStatus == 'approved' && role.customerKycClassification.kycStatusFromCce == 'approved'">Assign
+                            Appraiser</button>
                     </mat-cell>
                 </ng-container>
 
