--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-list/customer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-list/customer-list.component.html
@@ -1,6 +1,6 @@
 <kt-portlet>
     <kt-portlet-body>
-        <div class="mat-table__wrapper">
+        <div class="mat-table__wrapper" [ngStyle]="{'overflow-x': 'hidden'}">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="customerResult">
 
                 <ng-container matColumnDef="fullName">
