Changes in filtered component

--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -1,8 +1,21 @@
 <kt-portlet>
-    <kt-portlet-body [class]="'kt-portlet__body--fit d-flex align-items-center justify-content-center'">
+    <kt-portlet-body>
         <div class="row row-no-padding row-col-separator-xl">
-            <div class="col-12 text-center">
-                
+            <div class="col-12 d-flex">
+                <div>
+                    <div>By Status</div>
+                    <div class="d-flex">
+                        <div>Active</div>
+                        <div>Deactive</div>
+                    </div>
+                </div>
+                <div>
+                    <div>By Location</div>
+                    <div class="d-flex">
+                        <div>Active</div>
+                        <div>Deactive</div>
+                    </div>
+                </div>
             </div>
         </div>
     </kt-portlet-body>
