--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.scss
@@ -1,7 +1,7 @@
 :host {
-    .kt-portlet__body {
-        padding: 20px !important;
-    }
+    // .kt-portlet__body {
+    //     padding: 20px !important;
+    // }
     .filter {
         background-color: #454D67 !important;
         height: 35px !important;
