--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-details/customer-details.component.html
@@ -147,8 +147,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewLoan(loan.id)">View
-                    Details</div>
+                <div class="text-primary font-weight-500 kt-pointer kt-margin-b-10" (click)="viewLoan(loan.id)"
+                *ngxPermissionsOnly="['loanDetailsView']">View  Details</div>
             </div>
         </div>
     </div>
