--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.scss
@@ -7,6 +7,9 @@
         flex: 0 0 13% !important;
         padding-left: 10px !important;
     }
+    .mat-column-initial{
+        flex: 0 0 5% !important;
+    }
     .mat-column-fullName{
         flex: 0 0 12% !important;
     }
