--- a/gold-admin-frontend/src/app/views/pages/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/packets/packets-list/packets-list.component.html
@@ -30,9 +30,9 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <span class="kt-pointer" (click)="editPacket(role)">Edit</span>
-                            &nbsp; | &nbsp;
-                            <span class="kt-pointer text-danger" (click)="deletePacket(role)">Delete</span>
+                            <span class="kt-pointer" (click)="editPacket(role)" *ngxPermissionsOnly="['packetEdit']">Edit</span>
+                            <div class="px-2" *ngxPermissionsOnly="['packetDelete'] || ['packetEdit']">|</div>
+                            <span class="kt-pointer text-danger" (click)="deletePacket(role)" *ngxPermissionsOnly="['packetDelete']">Delete</span>
                         </div>
                     </mat-cell>
                 </ng-container>
