--- a/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/appraiser-list/appraiser-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/appraiser-list/appraiser-list.component.html
@@ -16,7 +16,7 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let appraiser">
-                        <div [ngStyle]="{'display': 'inherit'}">
+                        <div [ngStyle]="{'display': 'inherit'}" *ngxPermissionsOnly="['assignAppraiserEdit']">
                                 <!-- <div (click)="editappraiser(appraiser,'view')" class="kt-pointer"> View | &nbsp;</div> -->
                                 <div (click)="editappraiser(appraiser,'edit')" class="kt-pointer"> Edit  &nbsp;</div>
                         </div>
