--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -13,9 +13,9 @@
         </div>
         <div class="col-6 align-self-center">
             <kt-search *ngIf="showInput"></kt-search>
-            <kt-button *ngIf="value1" [value]='value1' [type]='type1' (click)="action($event)"
-                class="kt-margin-r-10 kt-margin-l-10">
-            </kt-button>
+            <div *ngxPermissionsOnly="permissionType; then elseBlock"></div>
+
+
             <kt-button *ngIf="value4" [value]='value4' [type]='type4' (click)="action($event)"
                 class="kt-margin-r-10 kt-margin-l-10">
             </kt-button>
@@ -52,4 +52,9 @@
 </ng-template> -->
 <ng-template #thenBlock>
     <kt-button *ngIf="rightButton" [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
+</ng-template>
+<ng-template #elseBlock>
+    <kt-button *ngIf="value1" [value]='value1' [type]='type1' (click)="action($event)"
+        class="kt-margin-r-10 kt-margin-l-10">
+    </kt-button>
 </ng-template>
