--- a/gold-admin-frontend/src/app/views/pages/auth/forgot-password/forgot-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/forgot-password/forgot-password.component.html
@@ -32,7 +32,7 @@
 				<!-- </mat-form-field> -->
 			</div>
 			<!--begin::Action-->
-			<div class="kt-login__actions">
+			<div class="kt-login__actions kt-margin-b-65">
 				<!-- <button routerLink="/auth/login" [disabled]="loading" id="kt_login_signup_cancel"
 					class="btn btn-secondary btn-elevate kt-login__btn-secondary">{{ 'AUTH.GENERAL.BACK_BUTTON' | translate }}</button> -->
 				<button (click)="submit()" id="kt_login_signin_submit" class="btn btn-sign-otp w-100"
