--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -1,19 +1,135 @@
 <kt-portlet>
     <kt-portlet-body>
         <div class="row row-no-padding row-col-separator-xl">
-            <div class="col-12 d-flex">
-                <div>
-                    <div>By Status</div>
+            <div class="col-12 d-flex overflow-auto py-2">
+                <div class="filtered-data">
+                    <div class="filtered-title">By Status</div>
                     <div class="d-flex">
-                        <div>Active</div>
-                        <div>Deactive</div>
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div>By Location</div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Location</div>
                     <div class="d-flex">
-                        <div>Active</div>
-                        <div>Deactive</div>
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Status</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Location</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Status</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Location</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Status</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Location</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Status</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="filtered-data">
+                    <div class="filtered-title">By Location</div>
+                    <div class="d-flex">
+                        <div class="filtered-value">
+                            <span>Active</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
+                        <div class="filtered-value">
+                            <span>Deactive</span>
+                            <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg">
+                        </div>
                     </div>
                 </div>
             </div>
