--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.scss
@@ -1,19 +1,28 @@
 :host {
-    // .kt-portlet__body {
-    //     padding: 20px !important;
-    // }
-    .filter {
-        background-color: #454D67 !important;
-        height: 35px !important;
-        width: 35px !important;
+    .kt-portlet__body {
+        padding: 10px 15px !important;
     }
-    .kt-filter-dropdown {
-        width: 900px;
-        // font-family: Poppins;
+    .filtered-data {
+        padding-right: 1rem;
+        // :last-of-type {
+        //     padding: 0;
+        // }
     }
-    .btn-absolute-bottom-right {
-        position: absolute;
-        bottom: 0;
-        right: 10px;
+    .filtered-title {
+        padding-bottom: 0.5rem;
+        font-weight: 500;
+    }
+    .filtered-value {
+        padding: 5px 10px;
+        margin-right: 0.5rem;
+        color: #454d67;
+        background-color: #f2f3f7;
+        border-radius: 4px;
+        font-weight: bolder;
+    }
+    .cancel-filtered-value {
+        height: 8px;
+        width: 8px;
+        margin-left: 0.5rem;
     }
 }
