bhushan: applied kyc permissions

--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.scss
@@ -19,7 +19,7 @@
 	.mat-column-kycStatus {
 		flex: 0 0 10% !important;
 	}
-	.mat-column-actions {
+	.mat-column-action {
 		flex: 0 0 10% !important;
 	}
 	.mat-column-view {
