--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -163,14 +163,14 @@
                     </table>
                 </div>
 
-                <div *ngIf="showTextBoxCce  && role == 'Customer Care Executive'"
+                <div *ngIf="showTextBoxCce  && userType == 6"
                     class="col kt-margin-t-20 kt-margin-b-20" style="width: 600px; margin: auto">
                     <mat-form-field class="w-100">
                         <textarea matInput formControlName="reasonFromCce" placeholder="Reason for Pending"></textarea>
                         <mat-error>Field Required</mat-error>
                     </mat-form-field>
                 </div>
-                <div *ngIf="showTextBoxBM && role== 'Branch Manager'" class="col kt-margin-t-20 kt-margin-b-20"
+                <div *ngIf="showTextBoxBM && userType== 5" class="col kt-margin-t-20 kt-margin-b-20"
                     style="width: 600px; margin: auto">
                     <mat-form-field class="w-100">
                         <textarea matInput formControlName="reasonFromBm" placeholder="Reason for Rejection"></textarea>
