--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -31,7 +31,7 @@
 
                 <!-- Table with selection -->
                 <!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
-                <!-- <ng-container matColumnDef="select">
+                <ng-container matColumnDef="select">
                     <mat-header-cell *matHeaderCellDef class="mat-column-checkbox">
                         <mat-checkbox (change)="$event ? masterToggle() : null"
                             [checked]="selection.hasValue() && isAllSelected()"
@@ -40,10 +40,11 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let row" class="mat-column-checkbox">
                         <mat-checkbox (click)="$event.stopPropagation()"
-                            (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
+                            (change)="($event ? selection.toggle(row) : null) && isChecked()"
+                            [checked]="selection.isSelected(row)">
                         </mat-checkbox>
                     </mat-cell>
-                </ng-container> -->
+                </ng-container>
 
                 <ng-container matColumnDef="storeId">
                     <mat-header-cell *matHeaderCellDef>Store ID</mat-header-cell>
